- Fix a rare edge case where stack bombard would continue attacking an empty tile

* RELEASE 17 PREVIEW 2
- Enable resource generating buildings to add the resource's yields to their city
- Display icons for generated resources on top of the generating building
- Option to allow airdrops without airports
- Can increase unit maintenance costs based on their build costs
- Adjustable AI worker requirement
- Option to pack the list of luxuries more tightly into the box on the city screen
- Fix freezes caused by undisembarkable escorting unit
  - Covered by the disembark immobile bug fix option, which has been renamed
- Improve turn timer
  - No longer count time spent on city screen
  - Fix possible double-counting of time spent on popups

* RELEASE 17 PREVIEW 1
- Optimize computation of trade networks
 - For details, see the info text file in the Trade Net X folder
- Option to measure turn times
- Zone of control changes
  - Allow land-to-sea and sea-to-land attacks, only using bombard stat
  - May be lethal
  - May be exerted by air units
  - Show attack animation even when attacker is not at the top of its stack
- Defensive bombard changes
  - May be lethal
  - May be performed by air units
  - Invisible, undetected units may be made immune
  - May be performed multiple times per turn with blitz
  - Naval units in a city may perform defensive bombard vs land attackers
- Allow precision strikes to target tile improvements
- Option not to end a unit's turn after it bombards a barricade
- Option to allow bombardment of other improvements on a tile with an occupied airfield
- Option to boost OCN increase from forbidden palaces in non-communal governments
- Fix graphical issues when running on Wine
- Option to allow defensive retreat on water tiles
- Overhaul implementation of shared visibility for simplicity and correctness
- Display total city count (disabled by default, appears on demographics screen)

* RELEASE 16
- Barbarian city capture & production (experimental)