@@ -477,10 +477,11 @@ define,	   0x4B0E80,	0x4B7E30,	0x4B0F10,	"City_recompute_yields_and_happiness",	
 inlead,	   0x55EC80,	0x56AD30,	0x55EC30,	"Leader_record_export",				"bool (__fastcall *) (Leader * this, int edx, int importer_civ_id, int resource_id)"
 inlead,	   0x55ED60,	0x56AE10,	0x55ED10,	"Leader_erase_export",				"bool (__fastcall *) (Leader * this, int edx, int importer_civ_id, int resource_id)"
 inlead,	   0x4216A0,	0x422BF0,	0x421720,	"City_Form_open",				"void (__fastcall *) (City_Form * this, int edx, City * city, int param_2)"
+repl vptr, 0x66dd10,	0x68adf0,	0x66dd10,	"Unit_has_enough_escorters_present",		"bool (__fastcall *) (Unit * this)"
+repl vptr, 0x66dd14,	0x68adf4,	0x66dd14,	"Unit_check_escorter_health",			"void (__fastcall *) (Unit * this, int edx, bool * has_any_escort_present, bool * any_escorter_cant_heal)"
 
 ignore,	   0x4507B0,	0x452860,	0x0,		"Unit_ai_move_offensive_unit",			"void (__fastcall *) (Unit * this)"
 ignore,    0x44C340,	0x0,		0x0,		"Unit_ai_eval_bombard_target",			"int (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y, int param_3)"
-ignore,	   0x66DD04,	0x0,		0x0,		"Unit_eval_escort_requirement",			"int (__fastcall *) (Unit *)"
 ignore,    0x558F70,	0x0,		0x0,		"Leader_is_enemy_unit",				"char (__fastcall *) (Leader * this, int edx, Unit * unit)"
 ignore,	   0x4BFD40,	0x0,		0x0,		"City_get_turns_to_build",			"int (__fastcall *) (City * this, int edx, int order_type, int order_id, char param_3)"
 ignore,    0x4BFF80,	0x0,		0x0,		"City_can_build_improvement",			"char (__fastcall *) (City * this, int edx, 0x0,   int i_improv, char param_2)"
