@@ -96,6 +96,10 @@ measure_turn_times = false
 ; Allows artillery unit AI to grab escorts from city defenders, causing the AI to use its artillery offensively instead of leaving it in its cities.
 use_offensive_artillery_ai = true
 
+; If true, the AI will not escort its units unless they have the "requires escort" flag set in the editor. This allows modders to remove the escort
+; requirement from certain types of units, for example artillery with non-zero defense.
+dont_escort_unflagged_units = false
+
 ; Set to a number to encourage the AI to build more artillery, set to false or <= 0 for no change in AI unit build choices. The number is how many
 ; artillery units the AI will try to keep around for every 100 non-artillery combat land units it has. The encouragement only applies if the AI is
 ; already above a minimum of one defensive unit per city and one offensive unit per two cities. Default: 16.
